--- a/package.json
+++ b/package.json
@@ -9,23 +9,25 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "fumadocs-core": "15.0.4",
+    "fumadocs-mdx": "11.5.1",
+    "fumadocs-openapi": "^6.0.5",
+    "fumadocs-ui": "15.0.4",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "fumadocs-ui": "15.0.4",
-    "fumadocs-core": "15.0.4",
-    "fumadocs-mdx": "11.5.1"
+    "shiki": "^2.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.3",
+    "@types/mdx": "^2.0.13",
     "@types/node": "22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "typescript": "^5.7.3",
-    "@types/mdx": "^2.0.13",
-    "@tailwindcss/postcss": "^4.0.3",
-    "tailwindcss": "^4.0.3",
-    "postcss": "^8.5.1",
     "eslint": "^8",
-    "eslint-config-next": "15.1.6"
+    "eslint-config-next": "15.1.6",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3",
+    "typescript": "^5.7.3"
   }
 }
