--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
     "fumadocs-core": "15.0.4",
     "fumadocs-mdx": "11.5.1",
     "fumadocs-openapi": "^6.0.5",
     "fumadocs-ui": "15.0.4",
+    "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "shiki": "^2.3.2"
+    "shiki": "^2.3.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.3",
