--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "fumadocs-ui": "15.0.4",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-medium-image-zoom": "^5.2.13",
     "shiki": "^2.3.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
