--- a/package.json
+++ b/package.json
@@ -10,25 +10,32 @@
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "fumadocs-core": "15.0.4",
     "fumadocs-mdx": "11.5.1",
     "fumadocs-openapi": "^6.0.5",
     "fumadocs-ui": "15.0.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.15.1",
     "react-medium-image-zoom": "^5.2.13",
+    "react-use": "^17.6.0",
     "shiki": "^2.3.2",
     "tailwindcss-animate": "^1.0.7",
+    "valtio": "^2.1.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.3",
+    "@types/lodash": "^4.17.15",
     "@types/mdx": "^2.0.13",
     "@types/node": "22.13.1",
     "@types/react": "^19.0.8",
