--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "fumadocs-mdx": "11.5.1",
     "fumadocs-openapi": "^6.0.5",
     "fumadocs-ui": "15.0.4",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "openapi-types": "^12.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.15.1",
